--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,32 @@
     <string name="fb_login_protocol_scheme">fb1932508860348049</string>
 
     <string name="sample"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="registrasi_bengkel">Registrasi Bengkel</string>
+    <string name="tips">Tips</string>
+    <string name="about">About</string>
+    <string name="logout">logout</string>
+    <string name="nilai_bengkel_ini">Nilai bengkel ini</string>
+    <string name="tuliskan_ulasan_singkat_anda">Tuliskan ulasan singkat anda</string>
+    <string name="submit">SUBMIT</string>
+    <string name="telepon">Telepon</string>
+    <string name="alamat">Alamat</string>
+    <string name="nama_bengkel">Nama Bengkel</string>
+    <string name="jam_tutup">Jam Tutup</string>
+    <string name="jam_buka">Jam Buka</string>
+    <string name="strip">-</string>
+    <string name="add_bengkel">ADD BENGKEL</string>
+    <string name="set_lokasi">SET LOKASI</string>
+    <string name="minggu">Minggu</string>
+    <string name="sabtu">Sabtu</string>
+    <string name="jumat">Jumat</string>
+    <string name="kamis">Kamis</string>
+    <string name="rabu">Rabu</string>
+    <string name="selasa">Selasa</string>
+    <string name="senin">Senin</string>
+    <string name="no_telepon_bengkel">No Telepon Bengkel</string>
+    <string name="alamat_bengkel">Alamat Bengkel</string>
+
 
 </resources>
