Image Slider, update UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="registrasi_bengkel">Registrasi Bengkel</string>
     <string name="tips">Tips</string>
     <string name="about">About</string>
-    <string name="logout">logout</string>
+    <string name="logout">LogOut</string>
     <string name="nilai_bengkel_ini">Nilai bengkel ini</string>
     <string name="tuliskan_ulasan_singkat_anda">Tuliskan ulasan singkat anda</string>
     <string name="submit">SUBMIT</string>
