--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BengkelMotor</string>
+    <string name="app_name">Cari Bengkel</string>
 
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyAjBJhV9a1erkAG8qff3tY0BczQoMhXico
@@ -11,8 +11,6 @@
         \nJika izin yang diberikan secara permanen sudah ditolak, Izin tersebut dapat diaktifkan pada System Settings &gt; Apps &gt; \'Cari Bengkel\'.</string>
     <string name="permission_required_toast">Location permission is required for this app.</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="facebook_app_id">1932508860348049</string>
     <string name="fb_login_protocol_scheme">fb1932508860348049</string>
